[gd_scene load_steps=4 format=2]

[ext_resource path="res://graphics/weapons/bowArrow/화살.png" type="Texture" id=1]
[ext_resource path="res://Weapons/Arrow.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 8.5 )

[node name="Arrow" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( -17.6051, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Collider" type="Area2D" parent="." groups=[
"Arrow",
]]
position = Vector2( -17.6051, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
position = Vector2( 10.8772, 0 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Collider" to="." method="_on_Collider_area_entered"]
[connection signal="area_exited" from="Collider" to="." method="_on_Collider_area_exited"]
[connection signal="body_entered" from="Collider" to="." method="_on_Collider_body_entered"]
[connection signal="body_exited" from="Collider" to="." method="_on_Collider_body_exited"]
